# suslang

./: .gitignore  Cargo.toml  LICENSE  README.md  colors.txt  copypasta.txt  tmpa.js
examples/: bools.sus  day1.sus  fibonacci.sus  helloworld.sus  ifs.sus  lib.sus  modules.sus  sum.sus  var.sus
src/: ast.rs  codegen.rs  error.rs  fs.rs  lib.rs  linker.rs  main.rs  module.rs  scope.rs  tokens.rs  typecheck.rs
src/ast/: parse.rs
src/ast/parse/: context.rs  error.rs  expression.rs  inline_comment.rs  items.rs  num.rs  operator.rs  opt.rs  spans.rs  statement.rs  string.rs  typ.rs
src/codegen/: c.rs  js.rs  py.rs  scm.rs
tests/: parse.rs
