[package]
name = "suslang"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
miette = {version = "5.5.0", features = ["fancy"]}
nom = "7.1.1"
nom-supreme = "0.8.0"
nom_locate = "4.0.0"
thiserror = "1.0.38"
