[package]
name = "suslang"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
miette = {version = "5.9.0", features = ["fancy"]}
thiserror = "1.0.40"
nom = "7.1.3"
nom-supreme = "0.8.0"
nom_locate = "4.1.0"

[features]
default = ["backend-python", "backend-c", "backend-js", "backend-scm", "frontend-suslang", "frontend-lisp"]

backend-python = []
backend-c = []
backend-js = []
backend-scm = []

frontend-suslang = []
frontend-lisp = []